# tutti

./: README.md  SPEC.md  WORKFLOW.md
duct-tui/: pyproject.toml
duct-tui/src/duct_tui/: __init__.py  app.py  data.py  theme.py
duct-tui/src/duct_tui/screens/: __init__.py  main.py
duct-tui/src/duct_tui/widgets/: __init__.py  content.py  footer.py  sidebar.py  tab_bar.py
tutti-cli/: pyproject.toml
tutti-cli/.claude/: CLAUDE.md
tutti-cli/src/tutti/: __init__.py  api.py  config.py  exceptions.py  markdown.py  models.py  sandbox.py  workspace.py
tutti-cli/src/tutti/cli/: archive_cmd.py  config_cmd.py  doctor_cmd.py  init_cmd.py  main.py  orchestrate_cmd.py  output.py  priority_cmd.py  resolve.py  session_cmd.py  status_cmd.py  sync_cmd.py  ticket_cmd.py  workspace_cmd.py
tutti-cli/src/tutti/sync/: adf.py  base.py  ci.py  github.py  jira.py  sessions.py  workspace_sync.py
tutti-cli/tests/: conftest.py  test_config.py  test_markdown.py  test_sandbox.py  test_workspace.py
tutti-cli/tests/cli/: test_archive.py  test_config_cmd.py  test_doctor.py  test_init.py  test_orchestrate.py  test_priority.py  test_session.py  test_status.py  test_sync.py  test_ticket.py  test_workspace_cmd.py
tutti-cli/tests/fixtures/: github_graphql_response.json  jira_search_page2.json  jira_search_response.json  jira_transitions_response.json
tutti-cli/tests/sync/: test_adf.py  test_ci.py  test_github.py  test_jira.py  test_sessions.py  test_workspace_sync.py
tutti-tui-py/: pyproject.toml
tutti-tui-py/src/tutti_tui/: __init__.py  app.py  data.py  theme.py
tutti-tui-py/src/tutti_tui/screens/: __init__.py  main.py
tutti-tui-py/src/tutti_tui/widgets/: __init__.py  content.py  footer.py  sidebar.py  tab_bar.py
(+56 files in other folders)
