[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutti"
version = "0.1.0"
description = "Developer workflow orchestration CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
tutti = "tutti.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tutti"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
